-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.5.0-rc1
Since the build configuration for CMake projects no longer contains the PATH to the Qt installation, it is also missing from the run configuration, which is especially an issue on Windows where that defines if the Qt libraries are found at runtime.
Not sure if that is an issue for Qbs projects too.
- relates to
-
QTCREATORBUG-18714 Qt Creator env PATH variable always forces /usr/bin
-
- Closed
-
-
QTCREATORBUG-19357 Add "Add build library search path to LD_LIBARAY_PATH/PATH" for build configurations
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-19354 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 212391,3 | CMake: Add QT_INSTALL_BINS to PATH on windows | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |